--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                 <i class="exclamation icon"></i>
                                     <div class="content">
                                         <div class="header">Hey, you</div>
-                                        <p>I am currently looking for a 12 weeks internship as an assistant engineer between June & August 2014. Please contact-me if you are interrested.</p>
+                                        <p>I am currently looking for a 12 weeks internship as an assistant engineer between June & August 2014. Please contact-me if you are interested.</p>
                                 </div>
                             </div>                      
                         </div>
