--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <nav>
             <div class="ui center aligned page grid sticky">
-                <div class="ui teal vertical icon inverted heavy menu active">
+                <div class="ui teal inverted vertical icon heavy menu active">
                     <a href="#education" class="item" >Education</a>
                     <a href="#skills" class="item" >Skills</a>
                     <a href="#experience" class="item" >Experience</a>
@@ -158,7 +158,7 @@
                         <div class="column">
                             <div class="ui small header">
                                 English
-                                <div class="sub header">Fluent</div>
+                                <div class="sub header">TOEIC 940</div>
                             </div>
                         </div>
                         <div class="column">
@@ -284,7 +284,7 @@
                             <a href="CV%20Alexis%20Gauthiez%20(en).pdf" class="ui button">English</a>
                             <a href="CV%20Alexis%20Gauthiez%20(fr).pdf" class="ui button">French</a>
                         </div>
-                        <div class="ui pointing small left teal label">.pdf</div>
+                        <div class="ui pointing small left black label">.pdf</div>
                     </div>              
                 </div>
             </div>
@@ -294,7 +294,7 @@
             <div class="content">
                 <div class="center">
                     <div class="ui teal icon header">
-                        <i class="circular question icon"></i> LOL
+                        <i class="circular gamepad icon"></i> LOL
                         <div class="sub header">Geek.</div>
                     </div>
                 </div>
